--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-Shawn-Mit
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        <title> $. ~/ Mitchell </title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+        <link rel="stylesheet" type="text/css" href="css/quiz.css">
+    </head>
+    <header>
+    </header>
+
+    <body class="gradient">
+<div id="wrapper">
+        <main>
+            <div class="w3-card-4">
+                <img src="images/aussie.jpg">
+                <div class="w3-padding w3-display-middle">
+                    <h1> shawn.mitchell </h1>
+                    <h3> -apprentice dev @ NSS- </h3>
+                </div>
+            </div>
+            <article class= "sources">
+                <h2> sources </h2>
+                <p>
+                    <ul>
+                        <li> <a href="https://www.esri.com/"> / ESRI </a></li>
+                        <li> <a href="https://www.theoatmeal.com/"> / theOatmeal </a></li>
+                        <li> <a href="https://www.ted.com/">/ TED  </a> </li>
+                        <li> <a href="http://www.bloomberg.com/"> / Bloomberg </a> </li>
+                        <li> <a href="http://www.psychologytoday.com//">  / Psychology Today </a> </li>
+                        <li> <a href="https://techcrunch.com/"> / Tech Crunch </a> </li>
+                        <li> <a href="http://http://www.sethgodin.com/sg/"> /SethGodin's Blog </a> </li>
+                        <li> <a href="https://www.soundcloud.com/"> / Soundcloud </a> </li>
+                    </ul>
+                </p>
+            </article>
+            <article>
+                <h2> about i </h2>
+                <section>
+                    <p>
+                        Middle Tennessee State University | BBA Marketing
+                        <br> 8 years: Information technology hardware and software sales solutions
+                        <br> 2.5 years: Global Trade - Logistics - Geospatial
+                        <br> 3 months : Healthcare - Data
+                    </p>
+                </section>
+            </article>
+            <article>
+                <h2> projects  </h2>
+                <br>
+                <h3> 'proper.tea' app</h3>
+                <section>
+                    <h4> <em> 'a proper spot of tea.' </em> </h4>
+                    <p> <b>'proper.tea' </b> is an application built on Javascript to provide my userbase the proper type of tea for their current or desired mood.
+                        <br> Users are able to input their current mood and 'proper.tea' will return a selection of various teas including brands, reviews, pricing, sources for purchase, and their natural properties. Users are able to create an account, save and update their favorite tea selections, and post reviews to help other users in the party. </p>
+                </section>
+                <h3> 'comingsoon.py' app </h3>
+                <section>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                </section>
+            </article>
+        </main>
+    </body>
+    <footer>
+        &copy; 2016 Shawn M.
+        <p> <a href="email:forgeforza@outlook.com"> Contact </a> </p>
+        <p>
+            <a href="https://shawn-mit.github.io/">
+                <i class="fa fa-git"> contact </i></a>
+        </p>
+    </footer>
+</div>
+</html>
