--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id="wrapper">
         <main>
             <div class="w3-card-4">
-                <img src="images/aussie.jpg">
+                <img src="images/firenze.jpg">
                 <div class="w3-padding w3-display-middle">
                     <h1> shawn.mitchell </h1>
                     <h3> -apprentice dev @ NSS- </h3>
@@ -26,7 +26,7 @@
                 <p>
                     <ul>
                         <li> <a href="https://www.esri.com/"> / ESRI </a></li>
-                        <li> <a href="https://www.theoatmeal.com/"> / theOatmeal </a></li>
+                        <li> <a href="http://www.programmableweb.com/"> / ProgrammableWeb </a></li>
                         <li> <a href="https://www.ted.com/">/ TED  </a> </li>
                         <li> <a href="http://www.bloomberg.com/"> / Bloomberg </a> </li>
                         <li> <a href="http://www.psychologytoday.com//">  / Psychology Today </a> </li>
