--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" type="text/css" href="css/quiz.css">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
 </head>
 <header>
 </header>
@@ -17,16 +18,16 @@
             <img src="images/aussie.jpg">
             <div class="w3-padding w3-display-left">
                 <h1> shawn.mitchell </h1>
-                <h3> -apprentice dev @ NSS- </h3>
+                <h3> apprentice dev | NSS </h3>
             </div>
         </div>
         <article>
-            <section>
+            <div class = "sources">
                 <h2> sources </h2>
                 <p>
                     <ul>
                         <li> <a href="https://www.esri.com/"> / ESRI </a></li>
-                        <li> <a href="https://www.theoatmeal.com/"> / theOatmeal </a></li>
+                        <li> <a href="http://www.programmableweb.com/"> / Programmable Web </a></li>
                         <li> <a href="https://www.ted.com/">/ TED  </a> </li>
                         <li> <a href="http://www.bloomberg.com/"> / Bloomberg </a> </li>
                         <li> <a href="http://www.psychologytoday.com//">  / Psychology Today </a> </li>
@@ -35,7 +36,7 @@
                         <li> <a href="https://www.soundcloud.com/"> / Soundcloud </a> </li>
                     </ul>
                 </p>
-            </section>
+            </div>
             <h2> about i </h2>
             <section>
                 <p>
@@ -48,8 +49,7 @@
             <h3> 'proper.tea' app</h3>
             <section>
                 <h4> <em> 'a proper spot of tea.' </em> </h4>
-                <p> <b>'proper.tea' </b> is an application built on Javascript to provide my userbase the proper type of tea for their current or desired mood.
-                    <br> Users are able to input their current mood and 'proper.tea' will return a selection of various teas including brands, reviews, pricing, sources for purchase, and their natural properties. Users are able to create an account, save and update their favorite tea selections, and post reviews to help other users in the party. </p>
+                <p> <h3>'proper.tea' </h3> is an application built on Javascript to provide my userbase the proper type of tea for their current or desired mood. Users are able to input their current mood and 'proper.tea' will return a selection of various teas including brands, reviews, pricing, sources for purchase, and their natural properties. Users are able to create an account, save and update their favorite tea selections, and post reviews to help other users in the party. </p>
             </section>
             <h3> 'comingsoon.py' app </h3>
             <section>
@@ -71,5 +71,4 @@
             <i class="fa fa-git"> contact </i></a>
     </p>
 </footer>
-
 </html>
