--- a/index.html
+++ b/index.html
@@ -6,62 +6,64 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-    <link rel="stylesheet" type="text/css" href="css/quiz.css">
-    <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 </head>
 <header>
 </header>
 
-<body class="gradient">
+<body>
     <main>
-        <div class="w3-card-4">
-            <img src="images/aussie.jpg">
-            <div class="w3-padding w3-display-left">
-                <h1> shawn.mitchell </h1>
-                <h3> apprentice dev | NSS </h3>
+
+        <div class="card">
+            <img src="../../images/aussie.jpg" class="tint" style="width:100%">
+            <div class="container">
+                <h4><b> NSS apprentice developer</b></h4>
+                <p> shawn.mitchell </p>
+        <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; Menu.Resources </span>
+            </div>
+            <div id="sidenavID" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a href="https://www.esri.com/">ESRI </a>
+                <a href="http://www.programmableweb.com/">Programmable Web </a>
+                <a href="https://www.ted.com/">TED  </a>
+                <a href="http://www.bloomberg.com/">Bloomberg </a>
+                <a href="http://www.psychologytoday.com/">Psychology Today </a>
+                <a href="https://techcrunch.com/">Tech Crunch </a>
+                <a href="http://http://www.sethgodin.com/sg/">SethGodin's Blog </a>
+                <a href="https://www.soundcloud.com/">Soundcloud </a>
+            </div>
+            <div class="accboxes">
+                <article>
+                    <section>
+                        <button class="accordion"> about i </button>
+                        <div class="content">
+                            Middle Tennessee State University | BBA Marketing
+                            <br> 9 years: Information technology hardware and software sales solutions.
+                        </div>
+                    </section>
+                </article>
+                <article>
+                    <section>
+                        <button class="accordion"> Proper.tea </button>
+                        <div class="content">
+                            proper.tea | Javascript application designed to provide my userbase the proper type of tea for their current or desired mood. Users are able to input their current mood and 'proper.tea' will return a selection of various teas including brands, reviews, pricing, sources for purchase, and their natural properties. Users are able to create an account, save, and update their favorite tea selections, and post reviews to help other users to find their preferred 'cup of tea'.
+                        </div>
+                    </section>
+                </article>
+                <article>
+                    <section>
+                        <button class="accordion"> Comingsoon.py </button>
+                        <div class="content">
+                            Python application. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </div>
+                    </section>
+                </article>
             </div>
         </div>
-        <article>
-            <div class = "sources">
-                <h2> sources </h2>
-                <p>
-                    <ul>
-                        <li> <a href="https://www.esri.com/"> / ESRI </a></li>
-                        <li> <a href="http://www.programmableweb.com/"> / Programmable Web </a></li>
-                        <li> <a href="https://www.ted.com/">/ TED  </a> </li>
-                        <li> <a href="http://www.bloomberg.com/"> / Bloomberg </a> </li>
-                        <li> <a href="http://www.psychologytoday.com//">  / Psychology Today </a> </li>
-                        <li> <a href="https://techcrunch.com/"> / Tech Crunch </a> </li>
-                        <li> <a href="http://http://www.sethgodin.com/sg/"> /SethGodin's Blog </a> </li>
-                        <li> <a href="https://www.soundcloud.com/"> / Soundcloud </a> </li>
-                    </ul>
-                </p>
-            </div>
-            <h2> about i </h2>
-            <section>
-                <p>
-                    Middle Tennessee State University | BBA Marketing <br> 8 years: Information technology hardware and software sales solutions. <br> 2.5 years: Global Trade - Logistics - Geospatial <br> 3 months : Healthcare - Data
-                </p>
-            </section>
-        </article>
-        <article>
-            <h2> projects  </h2>
-            <h3> 'proper.tea' app</h3>
-            <section>
-                <h4> <em> 'a proper spot of tea.' </em> </h4>
-                <p> <h3>'proper.tea' </h3> is an application built on Javascript to provide my userbase the proper type of tea for their current or desired mood. Users are able to input their current mood and 'proper.tea' will return a selection of various teas including brands, reviews, pricing, sources for purchase, and their natural properties. Users are able to create an account, save and update their favorite tea selections, and post reviews to help other users in the party. </p>
-            </section>
-            <h3> 'comingsoon.py' app </h3>
-            <section>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </section>
-        </article>
+        </div>
     </main>
-    <style>
-    @import url('https://fonts.googleapis.com/css?family=Federo');
-    </style>
+    <script src="javascripts/main.js"></script>
 </body>
 <footer>
     &copy; 2016 Shawn M.
@@ -71,4 +73,5 @@
             <i class="fa fa-git"> contact </i></a>
     </p>
 </footer>
+
 </html>
