--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 
 <head>
     <title> $. ~/ Mitchell </title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya Sans SC" rel="stylesheet">
 </head>
 <header>
 </header>
 
 <body>
     <main>
-
         <div class="card">
-            <img src="../../images/aussie.jpg" class="tint" style="width:100%">
+            <img  src="../../images/aussie.jpg" style="width:100%" >  
+            <div class="name"> shawnmitchell </div>
+                <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; SOURCES FROM AROUND THE WEB </span>
             <div class="container">
-                <h4><b> NSS apprentice developer</b></h4>
-                <p> shawn.mitchell </p>
-        <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; Menu.Resources </span>
+                <h4><b> APPRENTICE DEV @ NSS </b></h4>
             </div>
             <div id="sidenavID" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -47,7 +47,7 @@
                     <section>
                         <button class="accordion"> Proper.tea </button>
                         <div class="content">
-                            proper.tea | Javascript application designed to provide my userbase the proper type of tea for their current or desired mood. Users are able to input their current mood and 'proper.tea' will return a selection of various teas including brands, reviews, pricing, sources for purchase, and their natural properties. Users are able to create an account, save, and update their favorite tea selections, and post reviews to help other users to find their preferred 'cup of tea'.
+                            Javascript application designed to provide my userbase the proper type of tea for their current or desired mood. Users are able to input their current mood and 'proper.tea' will return a selection of various teas including brands, reviews, pricing, sources for purchase, and their natural properties. Users are able to create an account, save, update their favorite tea selections, and post reviews to help other users to find their preferred 'cup of tea'.
                         </div>
                     </section>
                 </article>
@@ -55,7 +55,7 @@
                     <section>
                         <button class="accordion"> Comingsoon.py </button>
                         <div class="content">
-                            Python application. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            Python application.
                         </div>
                     </section>
                 </article>
@@ -69,9 +69,8 @@
     &copy; 2016 Shawn M.
     <p> <a href="email:forgeforza@outlook.com"> Contact </a> </p>
     <p>
-        <a href="https://shawn-mit.github.io/">
+        <a href="https://github.com/shawn-mit">
             <i class="fa fa-git"> contact </i></a>
     </p>
 </footer>
-
 </html>
