--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-    <title> $. ~/ Mitchell </title>
+    <title> __s__mitchell </title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Alegreya Sans SC" rel="stylesheet">
 </head>
 <header>
-</header>
+</header> 
 
 <body>
     <main>
         <div class="card">
             <img  src="../../images/aussie.jpg" style="width:100%" >  
             <div class="name"> shawnmitchell </div>
-                <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; SOURCES FROM AROUND THE WEB </span>
+                <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; INFLUENCES </span>
             <div class="container">
-                <h4><b> APPRENTICE DEV @ NSS </b></h4>
+                <h4><b>  </b></h4>
             </div>
             <div id="sidenavID" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -32,6 +32,7 @@
                 <a href="https://techcrunch.com/">Tech Crunch </a>
                 <a href="http://http://www.sethgodin.com/sg/">SethGodin's Blog </a>
                 <a href="https://www.soundcloud.com/">Soundcloud </a>
+                <a href="https://www.schneier.com/"> Bruce Schneier </a>
             </div>
             <div class="accboxes">
                 <article>
@@ -39,13 +40,13 @@
                         <button class="accordion"> about i </button>
                         <div class="content">
                             Middle Tennessee State University | BBA Marketing
-                            <br> 9 years: Information technology hardware and software sales solutions.
+                            <br> 8 years: Information technology hardware, software, and data solutions.
                         </div>
                     </section>
                 </article>
                 <article>
                     <section>
-                        <button class="accordion"> Proper.tea </button>
+                        <button class="accordion"> <a href= "https://github.com/shawn-mit/PROPER.TEA"> Proper.tea </a> </button>
                         <div class="content">
                             Javascript application designed to provide my userbase the proper type of tea for their current or desired mood. Users are able to input their current mood and 'proper.tea' will return a selection of various teas including brands, reviews, pricing, sources for purchase, and their natural properties. Users are able to create an account, save, update their favorite tea selections, and post reviews to help other users to find their preferred 'cup of tea'.
                         </div>
@@ -53,9 +54,9 @@
                 </article>
                 <article>
                     <section>
-                        <button class="accordion"> Comingsoon.py </button>
+                        <button class="accordion"> <a href="https://github.com/shawn-mit/Ship.py"> Ship.py </a> </button>
                         <div class="content">
-                            Python application.
+                            Python application that displays U.S Maritime shipping volume based on Data.Gov records. Django framework with NVD3 as the visual library. Data was cleaned and then loaded into SQLite3 with Python connector to construct a restfulAPI. NVD3 a javascript library for the Django framework displays graphs of port shipping data. 
                         </div>
                     </section>
                 </article>
@@ -65,9 +66,10 @@
     </main>
     <script src="javascripts/main.js"></script>
 </body>
+<br>
 <footer>
     &copy; 2016 Shawn M.
-    <p> <a href="email:forgeforza@outlook.com"> Contact </a> </p>
+    <p> <a href="email:reply.mitchell@gmail.com"> Contact </a> </p>
     <p>
         <a href="https://github.com/shawn-mit">
             <i class="fa fa-git"> contact </i></a>
